src/main/java/com/example/testProject/error/ApiFieldError.java
package com.example.testProject.error;

public record ApiFieldError(
        String field,
        String message
) {
}

